mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_const_field.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: 2 errors found

error: Const fields must have a default value
--> test_scripts/error_cases/semantic_const_field.mux:3:13
   |
 3 |   const int f
   |             ^
   |
= help: Add a default value to the const field. Example: const int MAX_SIZE = 100

error: Expected expression, found '}'
--> test_scripts/error_cases/semantic_const_field.mux:4:1
   |
 4 | }
   | ^
